	- [kevin] $2153: fixed warnings in TiEmu patches to GDB
	- [kevin] $2154: fixed warnings, fixed UAE to detect 64-bit integer types under glibc, fixed is_varname
	- [kevin] $2155: fixed warnings in the assembly-level debugger
	- [kevin] $2156: fixed more warnings and a few file descriptor leaks
	- [kevin] $2159: fixed "TIGCC" and "ticalc.org" bookmarks to use the respective official spelling

- 10/05/2006, version 2.81:
	- [roms] $2059: renamed 'code/source' window into 'disassembly'
	- [roms] $2052: build a tiemu2-like release when NO_GDB is enabled	
	- [roms] $2053: enable and use UAE disassembler when NO_GDB is enabled
	- [roms] $2060: modified UAE disassembler to follow Motorola syntax
		Used to provide a replacement of the tiemu2 disassembler (license issues).
	- [kevin] $2081: removed excess spaces in disassemblers
	- [kevin] $2090: added --disable-gdb configure option
	- [roms]  $2096: fixed bug #1490859 (enable OK button when selecting an image)
	- [roms]  $2097: fixed bug #1471709 (crash on old state image)
	- [kevin] $2102: increased buffer size for the RELEASE viewer
	- [kevin] $2115: fixed splash.c saying "TiLP" instead of "TiEmu", updated version in configure.ac
	- [kevin] $2116: allocate metadata properly in send_file_and_debug_info
	- [kevin] $2118: fixed Insight preferences dialogs
	- [roms]  $2119: fixed linking with NO_GDB (missing xmalloc)
	- [roms]  $2121: fixed return value in engine_func for NO_GDB mode (stop engine)
	- [kevin] $2123: reset source ID when stopping the engine from engine_func (NO_GDB)
		=> Released on 28/05/2006.

- 25/08/2005, version 2.80:
	- [roms] $1689: fixed Titanium skin loading and fixed bug in skin loader
	- [roms] $1692: re-enabled transient mode for windows
	- [roms] $1694: set transient mode as option
	- [kevin] $1695: merge changes from tigcc-debugging-branch:
		* integrate the GDB source debugger (command-line interface)
		* fix include paths for systems without BFD and readline installed