@@ -15,6 +15,10 @@ SubVersion: $Id$
 	- [kevin] $2155: fixed warnings in the assembly-level debugger
 	- [kevin] $2156: fixed more warnings and a few file descriptor leaks
 	- [kevin] $2159: fixed "TIGCC" and "ticalc.org" bookmarks to use the respective official spelling
+	- [kevin] $2162: only run Qt event hook (processing GTK+ events) when currently displaying a modal dialog
+	                 (fixes DCOP hang after reset_calc with debugger running, due to the infinite loop protection)
+	- [kevin] $2162: disable "Debug file with TiEmu" when the debugger is running
+	- [kevin] $2162: added Seamonkey to the browser list, suggest Firefox instead of the obsolete Mozilla Suite
 
 - 10/05/2006, version 2.81:
 	- [roms] $2059: renamed 'code/source' window into 'disassembly'
